# apecs-simple-ui

./: CHANGELOG.md  LICENSE  README.md  cabal.project  scorch.cabal  stack.yaml
lib/: Scorch.hs  Shader.hs
lib/Apecs/: Folds.hs
lib/Scorch/: Components.hs  Interact.hs  Render.hs
lib/Scorch/Driver/: MainLoop.hs
lib/Scorch/Event/: Class.hs  Handler.hs  Type.hs
lib/Scorch/Optics/: Iso.hs
lib/Scorch/TypeLevel/: Disjoint.hs
lib/Scorch/Util/Apecs/: Folds.hs
lib/Scorch/Util/Optics/: Iso.hs
lib/Scorch/Util/Optics/Vinyl/: CoRec.hs
lib/Scorch/Util/STM/: SkipVar.hs
lib/Scorch/Util/TypeLevel/: Disjoint.hs
lib/Shader/: Quote.hs
src/: Main.hs  TriangleShader.hs
