cabal-version:       2.4
name:                scorch
version:             0.1.0.0
synopsis:            A simple UI framework based on Apecs.
-- description:
homepage:            https://github.com/Solonarv/scorch#README
license:             MIT
license-file:        LICENSE
author:              Solonarv
maintainer:          nstamm@gmx.de
-- copyright:
category:            Graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

common exts
  default-extensions:  TypeFamilies, BlockArguments, FlexibleContexts, RankNTypes, TypeApplications
                     , FlexibleInstances, MultiParamTypeClasses, NumericUnderscores, ViewPatterns
                     , LambdaCase, PatternGuards, DataKinds, PolyKinds, TypeOperators, ConstraintKinds
                     , PatternSynonyms, ScopedTypeVariables, DeriveGeneric, FunctionalDependencies
  other-extensions:    UndecidableInstances

library
  import: exts
  exposed-modules:     Scorch
                     , Scorch.Components
                     , Scorch.Driver.MainLoop
                     , Scorch.Event.Class
                     , Scorch.Event.Type
                     , Scorch.Interact
                     , Scorch.Render
                     , Scorch.Util.Apecs.Folds
                     , Scorch.Util.Optics.Iso
                     , Scorch.Util.STM.SkipVar
                     , Scorch.Util.TypeLevel.Disjoint
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , apecs ^>= 0.7.1
                     , linear ^>= 1.20
                     , sdl2 ^>= 2.4.1.0
                     , unliftio ^>= 0.2.9
                     , template-haskell ^>= 2.14.0.0
                     , bytestring ^>= 0.10.8.2
                     , vinyl
                     , lens ^>= 4.17
                     , fixed-timestep ^>= 0.1.0
                     , async ^>= 2.2.1
                     , stm ^>= 2.5.0.0
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable scorch-test
  import: exts
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , apecs
                     , linear
                     , sdl2
                     , scorch
  hs-source-dirs:      src
  default-language:    Haskell2010
